package behavioral.observer.BTCA1;

public interface Listener <T>{
    void update(T event);
}
